# selected_topics_in_programming_8_semester

./: .gitignore
exam_assignment/: CMakeLists.txt
exam_assignment/report/src/: _preamble.tex  index.tex
exam_assignment/src/: CMakeLists.txt  circadian_oscillator.cpp  graph_generator.cpp  graph_generator.h  main.cpp  parallel_simulator.h  reaction_rule_printer.cpp  seihr.cpp  stochastic_simulator.cpp  stochastic_simulator.h  symbol_table.cpp  thread_pool.cpp  thread_pool.h  types.cpp  types.h
exam_assignment/src/examples/: circadian_oscillator.cpp  examples.h  seihr.cpp  simple.cpp
exam_assignment/src/exercises/: benchmark.cpp  benchmark.h  make_graphs.cpp  make_graphs.h  peak_avg_seihr.cpp  peak_avg_seihr.h
exam_assignment/src/monitor/: monitor.cpp  monitor.h  monitors.cpp  species_peak_monitor.cpp  species_peak_monitor.h  species_trajectory_monitor.cpp  species_trajectory_monitor.h
exam_assignment/src/plot/: plot.cpp  plot.hpp
exam_assignment/tests/: CMakeLists.txt  main.cpp
lecture1/: ex2.cpp  ex3.cpp  helloworld.cpp  square.cpp  template.cpp
lecture10/: CMakeLists.txt
lecture10/src/: CMakeLists.txt  lambda-puzzle1.cpp  lambda-puzzle2.cpp  lambda-puzzle3.cpp  lambda_api.cpp
lecture11/include/: mtqueue.hpp  threadpool.hpp
lecture11/src/: CMakeLists.txt  futures.cpp  mtqueue.cpp
lecture12/: .gitignore  CMakeLists.txt  README.md
lecture12/include/: plot.hpp  rk4.h
lecture12/py/: rk4multi.py  rk4one.py  rk4two1.py  rk4two2.py  rk4two3.py
lecture12/src/: CMakeLists.txt  plot.cpp  rk4.c  rk4multi.cpp  rk4one.cpp  rk4two1.c  rk4two2.c  rk4two3.c  test_plot.cpp  test_qt5.cpp  test_rk4.c  test_rk4.cpp
lecture2/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
lecture3/: wordle_solver.cpp  words.txt
lecture3/polygon/: polygon.cpp  polygon.hpp  test_polygon.cpp
lecture4.5_assignment1/: CMakeLists.txt  listing.aux  listing.tex  main.cpp  number_series.cpp  series_wrapper.cpp  series_wrapper.h
lecture4/polyline/: CMakeLists.txt  main.cpp  point.cpp  point.h  polyline.cpp  polyline.h
lecture5/: base.cpp
lecture5.5_assignment2/: CMakeLists.txt  calculator.cpp  calculator.hpp  latex-code.sh  listing.aux  listing.tex  test_calculator.cpp
lecture5/calculator/: CMakeSettings.json  calculator.hpp
lecture5_assignment1/: main.cpp  number_series.cpp  number_series.h  series_wrapper.cpp  series_wrapper.h
lecture6/: CMakeLists.txt  terms.cpp
lecture7/: main.cpp
lecture7/templates/include/: fibonacci.hpp  power.hpp
lecture7/templates/src/: fibonacci_test.cpp  kindof_test.cpp  power_test.cpp  type_name_test.cpp
lecture8.5/: main.cpp
lecture8.5/JsonVisitor/: CMakeLists.txt
lecture8.5/JsonVisitor/include/: json_input.hpp  json_output.hpp  meta.hpp
lecture8.5/JsonVisitor/src/: CMakeLists.txt  json_input_test.cpp  json_output_test.cpp  meta_test.cpp  move-exercise_test.cpp
misc/: foreach.cpp  move_semantics.cpp
